--- a/todousado.html
+++ b/todousado.html
@@ -924,10 +924,10 @@
         "precio": "$35.000", "vendido": false,
         }, {
         "desc": "Mochila niña",
-        "precio": "$80.000", "vendido": false,
+        "precio": "$8.000", "vendido": false,
         }, {
         "desc": "Mochila nueva 31cm x 25cm",
-        "precio": "$8.000", "vendido": false,
+        "precio": "$25.000", "vendido": false,
         }, {
         "desc": "Patines profesionales Talle 34",
         "precio": "$20.000", "vendido": false,
@@ -1000,6 +1000,9 @@
         }, {
         "desc": "Amplificador Guitarra Sunset nuevo con etiqueta",
         "precio": "$90.000", "vendido": false,
+        }, {
+        "desc": "Mesa exterior de galeria con 6 sillas",
+        "precio": "$125.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
