--- a/todousado.html
+++ b/todousado.html
@@ -1003,6 +1003,9 @@
         }, {
         "desc": "Mesa exterior de galeria con 6 sillas",
         "precio": "$125.000", "vendido": false,
+        }, {
+        "desc": "Bate Softball profesional importado Louisville Slugger",
+        "precio": "$15.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
