--- a/todousado.html
+++ b/todousado.html
@@ -1006,6 +1006,15 @@
         }, {
         "desc": "Bate Softball profesional importado Louisville Slugger",
         "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Funda Cubrecolchon 2 plazas sin uso",
+        "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Flauta melodica Stagg escolar",
+        "precio": "$18.000", "vendido": false,
+        }, {
+        "desc": "Hamaca paraguaya",
+        "precio": "$250.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
