--- a/todousado.html
+++ b/todousado.html
@@ -1015,6 +1015,9 @@
         }, {
         "desc": "Hamaca paraguaya",
         "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Plancha Black and Decker Power Pro",
+        "precio": "$15.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
