--- a/todousado.html
+++ b/todousado.html
@@ -351,7 +351,7 @@
         "precio": "$80.000", "vendido": false,
         }, {
         "desc": "Auriculares Hyperx",
-        "precio": "$40.000", "vendido": false,
+        "precio": "$40.000", "vendido": true,
         }, {
         "desc": "Pistola juguete Silenciadora Elite NERF FORTNITE con 10 balas cerradas",
         "precio": "$45.000", "vendido": false,
@@ -762,7 +762,7 @@
         "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Microondas LG (funciona OK)",
-        "precio": "$30.000", "vendido": false,
+        "precio": "$30.000", "vendido": true,
         }, {
         "desc": "Hornito Yelmo (funciona OK)",
         "precio": "$15.000", "vendido": false,
@@ -1018,6 +1018,21 @@
         }, {
         "desc": "Plancha Black and Decker Power Pro",
         "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Dos pesas 5kg",
+        "precio": "$5.000", "vendido": false,
+        }, {
+        "desc": "Comoda con mesa luz marmol",
+        "precio": "$800.000", "vendido": false,
+        }, {
+        "desc": "Comoda estilo frances marmol",
+        "precio": "$500.000", "vendido": false,
+        }, {
+        "desc": "Bolsa de dormir niño",
+        "precio": "$18.000", "vendido": false,
+        }, {
+        "desc": "Bolsa de dormir niño",
+        "precio": "$18.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
@@ -1088,7 +1103,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 13 de Febrero 2024
+        Actualizada Version 14 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
