--- a/todousado.html
+++ b/todousado.html
@@ -234,7 +234,7 @@
         "precio": "$5.000", "vendido": false,
         }, {
         "desc": "Casco bicicleta marca Cool para adulto",
-        "precio": "$6.000", "vendido": false,
+        "precio": "$6.000", "vendido": true,
         }, {
         "desc": "Palo trekking regulable marca Masters",
         "precio": "$9.000", "vendido": true,
