--- a/todousado.html
+++ b/todousado.html
@@ -309,7 +309,7 @@
         "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Alfombra grande única hecha a mano",
-        "precio": "$200.000", "vendido": true,
+        "precio": "$200.000", "vendido": false,
         }, {
         "desc": "Pizarra doble con rollo",
         "precio": "$35.000", "vendido": false,
@@ -330,7 +330,7 @@
         "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Balanza de pie",
-        "precio": "$18.000", "vendido": false,
+        "precio": "$18.000", "vendido": true,
         }, {
         "desc": "Banquito",
         "precio": "$15.000", "vendido": true,
@@ -444,7 +444,7 @@
         "precio": "$300.000", "vendido": false,
         }, {
         "desc": "Reloj de pared vintage",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Batidora de pie planetaria Liliana",
         "precio": "$70.000", "vendido": false,
@@ -1033,6 +1033,9 @@
         }, {
         "desc": "Bolsa de dormir niño",
         "precio": "$18.000", "vendido": false,
+        }, {
+        "desc": "Libros Diario de Greg (precio cada uno)",
+        "precio": "$6.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
@@ -1103,7 +1106,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 14 de Febrero 2024
+        Actualizada Version 15 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
