--- a/todousado.html
+++ b/todousado.html
@@ -1036,6 +1036,9 @@
         }, {
         "desc": "Libros Diario de Greg (precio cada uno)",
         "precio": "$6.000", "vendido": false,
+        }, {
+        "desc": "Pistola Revolver Juguete a Cebita 12 disparos",
+        "precio": "$2.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
