--- a/todousado.html
+++ b/todousado.html
@@ -987,10 +987,10 @@
         "precio": "$8.000", "vendido": false,
         }, {
         "desc": "Frasco de vidrio",
-        "precio": "$6.000", "vendido": false,
+        "precio": "$6.000", "vendido": true,
         }, {
         "desc": "Frasco de vidrio",
-        "precio": "$7.000", "vendido": false,
+        "precio": "$7.000", "vendido": true,
         }, {
         "desc": "Fuente de vidrio Pirex grande",
         "precio": "$10.000", "vendido": false,
@@ -1039,6 +1039,9 @@
         }, {
         "desc": "Pistola Revolver Juguete a Cebita 12 disparos",
         "precio": "$2.000", "vendido": false,
+        }, {
+        "desc": "Nebulizador",
+        "precio": "$25.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
