--- a/todousado.html
+++ b/todousado.html
@@ -1037,6 +1037,9 @@
         "desc": "Libros Diario de Greg (precio cada uno)",
         "precio": "$6.000", "vendido": false,
         }, {
+        "desc": "Binoculares Montagne 12x32 con funda",
+        "precio": "$22.000", "vendido": false,
+        }, {
         "desc": "Pistola Revolver Juguete a Cebita 12 disparos",
         "precio": "$2.000", "vendido": false,
         }, {
