--- a/todousado.html
+++ b/todousado.html
@@ -1045,6 +1045,12 @@
         }, {
         "desc": "Nebulizador",
         "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Plumón duvet queen y su cubre plumón usado",
+        "precio": "$60.000", "vendido": false,
+        }, {
+        "desc": "Plumón duvet queen y cubre plumón",
+        "precio": "$100.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
