--- a/todousado.html
+++ b/todousado.html
@@ -342,7 +342,7 @@
         "precio": "$35.000", "vendido": false,
         }, {
         "desc": "Espejo antiguo 160 cm x 60 cm",
-        "precio": "$150.000", "vendido": false,
+        "precio": "$150.000", "vendido": true,
         }, {
         "desc": "Espejo antiguo 85 cm X 60 cm",
         "precio": "$120.000", "vendido": false,
@@ -447,7 +447,7 @@
         "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Batidora de pie planetaria Liliana",
-        "precio": "$70.000", "vendido": false,
+        "precio": "$60.000", "vendido": false,
         }, {
         "desc": "Juego de sillones exterior para galeria",
         "precio": "$120.000", "vendido": true,
@@ -1054,6 +1054,12 @@
         }, {
         "desc": "Amazon ECHO (4ta Generación) sonido de alta calidad y hub de Smart Home y Alexa",
         "precio": "$180.000", "vendido": false,
+        }, {
+        "desc": "Cajón de madera grande",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "3 Chapas para decorar",
+        "precio": "$8.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
