--- a/todousado.html
+++ b/todousado.html
@@ -1060,6 +1060,9 @@
         }, {
         "desc": "3 Chapas para decorar",
         "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Fuelle grande para avivar fuego asado",
+        "precio": "$15.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
