--- a/todousado.html
+++ b/todousado.html
@@ -1063,6 +1063,9 @@
         }, {
         "desc": "Fuelle grande para avivar fuego asado",
         "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Mesa de comedor madera maciza 140 x 80",
+        "precio": "$180.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
