--- a/todousado.html
+++ b/todousado.html
@@ -525,13 +525,13 @@
         "precio": "$68.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Ticket To Ride Europa (en ingles)",
-        "precio": "$48.000", "vendido": true
+        "precio": "$48.000", "vendido": false,
         }, {
         "desc": "Expansion Juego de mesa Ticket to Ride Europa 1912 (en ingles)",
         "precio": "$30.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Ticket to Ride (en ingles) Mapa EEUU",
-        "precio": "$48.000", "vendido": false,
+        "precio": "$48.000", "vendido": true,
         }, {
         "desc": "Expansion Juego de mesa Ticket to Ride EEUU 1910 (en ingles)",
         "precio": "$30.000", "vendido": false,
@@ -852,10 +852,10 @@
         "precio": "$5.000", "vendido": false,
         }, {
         "desc": "Colchoneta inflabe para camping ThermaRest importada 120x54",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Colchoneta inflabe para camping ThermaRest importada 120x54",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Raqueta Tenis Wilson Blade casi nueva",
         "precio": "$180.000", "vendido": false,
