--- a/todousado.html
+++ b/todousado.html
@@ -291,7 +291,7 @@
         "precio": "$215.000", "vendido": false,
         }, {
         "desc": "TV LG 42 pulgadas",
-        "precio": "$140.000", "vendido": false,
+        "precio": "$140.000", "vendido": true,
         }, {
         "desc": "Casco bicicleta Raleigh R35 regulable",
         "precio": "$18.000", "vendido": false,
@@ -609,10 +609,10 @@
         "precio": "$20.000", "vendido": false,
         }, {
         "desc": "Reposera blanca rigida",
-        "precio": "$45.000", "vendido": false,
+        "precio": "$45.000", "vendido": true,
         }, {
         "desc": "Reposera blanca rigida",
-        "precio": "$45.000", "vendido": false,
+        "precio": "$45.000", "vendido": true,
         }, {
         "desc": "Cama Saltarina Grande (4 metros)",
         "precio": "$250.000", "vendido": false,
@@ -1047,7 +1047,7 @@
         "precio": "$25.000", "vendido": false,
         }, {
         "desc": "Plumón duvet queen y su cubre plumón usado",
-        "precio": "$60.000", "vendido": false,
+        "precio": "$60.000", "vendido": true,
         }, {
         "desc": "Plumón duvet queen y cubre plumón",
         "precio": "$100.000", "vendido": false,
@@ -1136,7 +1136,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 15 de Febrero 2024
+        Actualizada Version 16 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
