--- a/todousado.html
+++ b/todousado.html
@@ -792,10 +792,10 @@
         "precio": "$60.000", "vendido": false,
         }, {
         "desc": "Cama de 1 plaza laqueadas masizas",
-        "precio": "$80.000", "vendido": false,
+        "precio": "$80.000", "vendido": true,
         }, {
         "desc": "Cama de 1 plaza laqueadas masizas",
-        "precio": "$80.000", "vendido": false,
+        "precio": "$80.000", "vendido": true,
         }, {
         "desc": "TV Noblex LED 32\" (80 cms de vision)",
         "precio": "$75.000", "vendido": false,
@@ -963,7 +963,7 @@
         "precio": "$10.000", "vendido": false,
         }, {
         "desc": "Dos Mancuernas ajustables 5kg + barrita",
-        "precio": "$50.000", "vendido": false,
+        "precio": "$50.000", "vendido": true,
         }, {
         "desc": "Picadora de ajo",
         "precio": "$7.000", "vendido": false,
@@ -1005,7 +1005,7 @@
         "precio": "$125.000", "vendido": false,
         }, {
         "desc": "Bate Softball profesional importado Louisville Slugger",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Funda Cubrecolchon 2 plazas sin uso",
         "precio": "$20.000", "vendido": false,
