--- a/todousado.html
+++ b/todousado.html
@@ -846,10 +846,10 @@
         "precio": "$20.000", "vendido": false,
         }, {
         "desc": "Portaretrato de 4 fotos 15\"x21\"",
-        "precio": "$5.000", "vendido": false,
+        "precio": "$5.000", "vendido": true,
         }, {
         "desc": "Portaretrato de 4 fotos 15\"x21\"",
-        "precio": "$5.000", "vendido": false,
+        "precio": "$5.000", "vendido": true,
         }, {
         "desc": "Colchoneta inflabe para camping ThermaRest importada 120x54",
         "precio": "$15.000", "vendido": true,
