--- a/todousado.html
+++ b/todousado.html
@@ -426,7 +426,7 @@
         "precio": "$125.000", "vendido": true,
         }, {
         "desc": "Bicicleta Blueray Rodado 24 ",
-        "precio": "$80.000", "vendido": false,
+        "precio": "$80.000", "vendido": true,
         }, {
         "desc": "Bicicleta Zenith Rodado 26",
         "precio": "$60.000", "vendido": true,
