--- a/todousado.html
+++ b/todousado.html
@@ -518,7 +518,7 @@
         "desc": "Juego de mesa TransEuropa (en ingles)",
         "precio": "$48.000", "vendido": false,
         }, {
-        "desc": "Juego de mesa Power Grid (en ingles) con expansion Russia/Japon",
+        "desc": "Juego de mesa Power Grid (en ingles)",
         "precio": "$48.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Ticket to Ride Rails & Sails (en ingles)",
@@ -597,7 +597,7 @@
         "precio": "$75.000", "vendido": true,
         }, {
         "desc": "Aspirador Robot Ecovacs Deebot 661 wifi mopa",
-        "precio": "240.000", "vendido": false,
+        "precio": "240.000", "vendido": true,
         }, {
         "desc": "Celador Acero Inoxidable",
         "precio": "$25.000", "vendido": false,
@@ -879,7 +879,7 @@
         "precio": "$9.000", "vendido": true,
         }, {
         "desc": "Selladora de bolsa 20cm",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Lampara de escritorio Daewoo Pantalla Metal",
         "precio": "$30.000", "vendido": true,
