--- a/boardgames.html
+++ b/boardgames.html
@@ -269,7 +269,7 @@
         "precio": "$48.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Ticket to Ride Rails & Sails (en ingles)",
-        "precio": "$68.000", "vendido": false,
+        "precio": "$68.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Ticket To Ride Europa (en ingles)",
         "precio": "$48.000", "vendido": false,
@@ -356,13 +356,9 @@
     </script>
     <section>
       <h1>
-        Lista de juegos de Mesa
+        Juegos de Mesa Usados a la Venta
       </h1>
-      <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 16 de Febrero 2024
-      </p>
-      <p>Enviar pedido por mensaje Whatsapp al 1131843732. Los pedidos se retiran por el partido de Tigre en norte del gran Buenos Aires.</p>
-      <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
+      <p>Enviar pedido por mensaje Whatsapp al 1131843732. Los pedidos se retiran por el partido de Tigre en norte del gran Buenos Aires. Envios son a cargo del comprador.</p>
       <p>Se puede ver la imagen de cada item presionando el boton de Ver y luego se puede sacar presionando el mismo boton que dice Esc.</p>
       </section>
     <section>
