--- a/todousado.html
+++ b/todousado.html
@@ -535,7 +535,7 @@
         "precio": "$48.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to Ride Rails & Sails (en ingles)",
-        "precio": "$68.000", "vendido": false, "categoria": 0
+        "precio": "$68.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket To Ride Europa (en ingles)",
         "precio": "$48.000", "vendido": false, "categoria": 0
@@ -1033,7 +1033,7 @@
         "precio": "$15.000", "vendido": false, "categoria": 1
         }, {
         "desc": "Dos pesas 5kg",
-        "precio": "$5.000", "vendido": false, "categoria": 4
+        "precio": "$5.000", "vendido": true, "categoria": 4
         }, {
         "desc": "Comoda con mesa luz marmol",
         "precio": "$800.000", "vendido": false, "categoria": 3
