--- a/todousado.html
+++ b/todousado.html
@@ -589,7 +589,7 @@
         "precio": "$15.000", "vendido": false, "categoria": 1
         }, {
         "desc": "Lechuza decoración 13cm",
-        "precio": "$10.000", "vendido": false, "categoria": 1
+        "precio": "$10.000", "vendido": true, "categoria": 1
         }, {
         "desc": "Lechuza decoración 10cm cerámica",
         "precio": "$6.000", "vendido": false, "categoria": 1
