--- a/todousado.html
+++ b/todousado.html
@@ -1079,6 +1079,9 @@
         }, {
         "desc": "Mesa de comedor madera maciza 140 x 80",
         "precio": "$180.000", "vendido": false, "categoria": 3
+        }, {
+        "desc": "Libro The World of Ice & Fire (en ingles, tapa dura) - The Game of Thrones",
+        "precio": "$80.000", "vendido": false, "categoria": 6
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
