--- a/todousado.html
+++ b/todousado.html
@@ -1082,6 +1082,9 @@
         }, {
         "desc": "Libro The World of Ice & Fire (en ingles, tapa dura) - The Game of Thrones",
         "precio": "$80.000", "vendido": false, "categoria": 6
+        }, {
+        "desc": "Zapatos Borcegos Caterpillar Talle AR42 US9 Wide With, muy buen estado",
+        "precio": "$30.000", "vendido": false, "categoria": 9
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
