--- a/todousado.html
+++ b/todousado.html
@@ -1085,6 +1085,18 @@
         }, {
         "desc": "Zapatos Borcegos Caterpillar Talle AR42 US9 Wide With, muy buen estado",
         "precio": "$30.000", "vendido": false, "categoria": 9
+        }, {
+        "desc": "Carpa Playera Alpes Outdoor Dune",
+        "precio": "$10.000", "vendido": false, "categoria": 10
+        }, {
+        "desc": "Carpa Playera",
+        "precio": "$10.000", "vendido": false, "categoria": 10
+        }, {
+        "desc": "Vasos 8 muy buena calidad",
+        "precio": "$30.000", "vendido": false, "categoria": 3
+        }, {
+        "desc": "Vajillas ponchera",
+        "precio": "$18.000", "vendido": false, "categoria": 3
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
