--- a/todousado.html
+++ b/todousado.html
@@ -1097,6 +1097,9 @@
         }, {
         "desc": "Vajillas ponchera",
         "precio": "$18.000", "vendido": false, "categoria": 3
+        }, {
+        "desc": "Exprimidora Jugos Top House",
+        "precio": "$15.000", "vendido": false, "categoria": 3
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
