--- a/todousado.html
+++ b/todousado.html
@@ -1093,13 +1093,16 @@
         "precio": "$10.000", "vendido": false, "categoria": 10
         }, {
         "desc": "Vasos 8 muy buena calidad",
-        "precio": "$30.000", "vendido": false, "categoria": 3
+        "precio": "$30.000", "vendido": false, "categoria": 2
         }, {
         "desc": "Vajillas ponchera",
-        "precio": "$18.000", "vendido": false, "categoria": 3
+        "precio": "$18.000", "vendido": false, "categoria": 2
         }, {
         "desc": "Exprimidora Jugos Top House",
-        "precio": "$15.000", "vendido": false, "categoria": 3
+        "precio": "$15.000", "vendido": false, "categoria": 2
+        }, {
+        "desc": "Libro Guiness World Records 2022",
+        "precio": "$180.000", "vendido": false, "categoria": 6
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
