--- a/todousado.html
+++ b/todousado.html
@@ -904,7 +904,7 @@
         "precio": "$20.000", "vendido": false, "categoria": 1
         }, {
         "desc": "Planta interior grande con maceta Dieffenbachia",
-        "precio": "$25.000", "vendido": false, "categoria": 0
+        "precio": "$25.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Planta palo de agua con maceta",
         "precio": "$12.000", "vendido": false, "categoria": 0
