--- a/boardgames.html
+++ b/boardgames.html
@@ -245,7 +245,7 @@
         "precio": "$50.000", "vendido": true,
         }, {
         "desc": "Juego de mesa 7wonders Duel (original en ingles) con expansion Pantheon",
-        "precio": "$38.000", "vendido": false,
+        "precio": "$38.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Carcassone Junior (original en ingles)",
         "precio": "$28.000", "vendido": false,
@@ -299,7 +299,7 @@
         "precio": "$28.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Ticket to Ride Märklin Alemania (en ingles)",
-        "precio": "$28.000", "vendido": false,
+        "precio": "$28.000", "vendido": true,
         }, {
         "desc": "Juego de mesa 7 Wonders (en ingles)",
         "precio": "$65.000", "vendido": false,
