--- a/todousado.html
+++ b/todousado.html
@@ -511,7 +511,7 @@
         "precio": "$50.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa 7wonders Duel (original en ingles) con expansion Pantheon",
-        "precio": "$38.000", "vendido": false, "categoria": 0
+        "precio": "$38.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Carcassone Junior (original en ingles)",
         "precio": "$28.000", "vendido": false, "categoria": 0
@@ -565,7 +565,7 @@
         "precio": "$28.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to Ride Märklin Alemania (en ingles)",
-        "precio": "$28.000", "vendido": false, "categoria": 0
+        "precio": "$28.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa 7 Wonders (en ingles)",
         "precio": "$65.000", "vendido": false, "categoria": 0
