--- a/todousado.html
+++ b/todousado.html
@@ -1102,7 +1102,19 @@
         "precio": "$15.000", "vendido": false, "categoria": 2
         }, {
         "desc": "Libro Guiness World Records 2022",
-        "precio": "$180.000", "vendido": false, "categoria": 6
+        "precio": "$10.000", "vendido": false, "categoria": 6
+        }, {
+        "desc": "Reposera portatil plegable",
+        "precio": "$15.000", "vendido": false, "categoria": 7
+        }, {
+        "desc": "Reposera portatil plegable",
+        "precio": "$15.000", "vendido": false, "categoria": 7
+        }, {
+        "desc": "Mochila niña",
+        "precio": "$5.000", "vendido": false, "categoria": 0
+        }, {
+        "desc": "Raqueta Tenis Vintage",
+        "precio": "$8.000", "vendido": false, "categoria": 4
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
