--- a/todousado.html
+++ b/todousado.html
@@ -1115,6 +1115,9 @@
         }, {
         "desc": "Raqueta Tenis Vintage",
         "precio": "$8.000", "vendido": false, "categoria": 4
+        }, {
+        "desc": "Tartaneras Nike mercurial talle 36eur",
+        "precio": "$10.000", "vendido": false, "categoria": 6
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
