--- a/todousado.html
+++ b/todousado.html
@@ -1118,6 +1118,9 @@
         }, {
         "desc": "Tartaneras Nike mercurial talle 36eur",
         "precio": "$10.000", "vendido": false, "categoria": 6
+        }, {
+        "desc": "Patines Talle 27-30",
+        "precio": "$16.000", "vendido": false, "categoria": 6
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
