--- a/todousado.html
+++ b/todousado.html
@@ -460,7 +460,7 @@
         "precio": "$15.000", "vendido": true, "categoria": 1
         }, {
         "desc": "Batidora de pie planetaria Liliana",
-        "precio": "$60.000", "vendido": false, "categoria": 2
+        "precio": "$60.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Juego de sillones exterior para galeria",
         "precio": "$120.000", "vendido": true, "categoria": 3
@@ -496,7 +496,7 @@
         "precio": "$22.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de cartas Set (original en ingles)",
-        "precio": "$18.000", "vendido": false, "categoria": 0
+        "precio": "$18.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Codigo Secreto",
         "precio": "$19.000", "vendido": true, "categoria": 0
@@ -529,10 +529,10 @@
         "precio": "$18.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Juego de mesa TransEuropa (en ingles)",
-        "precio": "$48.000", "vendido": false, "categoria": 0
+        "precio": "$48.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Power Grid (en ingles)",
-        "precio": "$48.000", "vendido": false, "categoria": 0
+        "precio": "$48.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to Ride Rails & Sails (en ingles)",
         "precio": "$68.000", "vendido": true, "categoria": 0
@@ -550,16 +550,16 @@
         "precio": "$30.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to Ride New York (en ingles)",
-        "precio": "$30.000", "vendido": false, "categoria": 0
+        "precio": "$30.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to Ride Nordic Countries (en ingles)",
         "precio": "$46.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to India/Switzrland Countries (en ingles)",
-        "precio": "$38.000", "vendido": false, "categoria": 0
+        "precio": "$38.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to Ride United Kingdom / Pennsylvania (en ingles)",
-        "precio": "$38.000", "vendido": false, "categoria": 0
+        "precio": "$38.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to Ride Poland (en ingles)",
         "precio": "$28.000", "vendido": false, "categoria": 0
@@ -744,7 +744,7 @@
         "desc": "Comic Gravity Falls",
         "precio": "$15.000", "vendido": false, "categoria": 6
         }, {
-        "desc": "Rollers regulables talle Small marca Lamborghini",
+        "desc": "Rollers patines regulables talle Small marca Lamborghini",
         "precio": "$35.000", "vendido": false, "categoria": 4
         }, {
         "desc": "Juguete Pistola Nerf Mini con 3 balas",
@@ -1117,10 +1117,10 @@
         "precio": "$8.000", "vendido": false, "categoria": 4
         }, {
         "desc": "Tartaneras Nike mercurial talle 36eur",
-        "precio": "$10.000", "vendido": false, "categoria": 6
+        "precio": "$10.000", "vendido": false, "categoria": 4
         }, {
         "desc": "Patines Talle 27-30",
-        "precio": "$16.000", "vendido": false, "categoria": 6
+        "precio": "$16.000", "vendido": false, "categoria": 4
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
