--- a/boardgames.html
+++ b/boardgames.html
@@ -230,7 +230,7 @@
         "precio": "$22.000", "vendido": true,
         }, {
         "desc": "Juego de cartas Set (original en ingles)",
-        "precio": "$18.000", "vendido": false,
+        "precio": "$18.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Codigo Secreto",
         "precio": "$19.000", "vendido": true,
@@ -263,10 +263,10 @@
         "precio": "$18.000", "vendido": false,
         }, {
         "desc": "Juego de mesa TransEuropa (en ingles)",
-        "precio": "$48.000", "vendido": false,
+        "precio": "$48.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Power Grid (en ingles)",
-        "precio": "$48.000", "vendido": false,
+        "precio": "$48.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Ticket to Ride Rails & Sails (en ingles)",
         "precio": "$68.000", "vendido": true,
@@ -284,16 +284,16 @@
         "precio": "$30.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Ticket to Ride New York (en ingles)",
-        "precio": "$30.000", "vendido": false,
+        "precio": "$30.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Ticket to Ride Nordic Countries (en ingles)",
         "precio": "$46.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Ticket to India/Switzrland Countries (en ingles)",
-        "precio": "$38.000", "vendido": false,
+        "precio": "$38.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Ticket to Ride United Kingdom / Pennsylvania (en ingles)",
-        "precio": "$38.000", "vendido": false,
+        "precio": "$38.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Ticket to Ride Poland (en ingles)",
         "precio": "$28.000", "vendido": false,
