--- a/todousado.html
+++ b/todousado.html
@@ -523,7 +523,7 @@
         "precio": "11.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Juego de mesa Lost Cities 2 player (en ingles)",
-        "precio": "$18.000", "vendido": false, "categoria": 0
+        "precio": "$18.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Clue Jr (en ingles)",
         "precio": "$18.000", "vendido": false, "categoria": 0
@@ -538,7 +538,7 @@
         "precio": "$68.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket To Ride Europa (en ingles)",
-        "precio": "$48.000", "vendido": false, "categoria": 0
+        "precio": "$48.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Expansion Juego de mesa Ticket to Ride Europa 1912 (en ingles)",
         "precio": "$30.000", "vendido": false, "categoria": 0
@@ -553,7 +553,7 @@
         "precio": "$30.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to Ride Nordic Countries (en ingles)",
-        "precio": "$46.000", "vendido": false, "categoria": 0
+        "precio": "$46.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Ticket to India/Switzrland Countries (en ingles)",
         "precio": "$38.000", "vendido": true, "categoria": 0
@@ -811,7 +811,7 @@
         "precio": "$80.000", "vendido": true, "categoria": 3
         }, {
         "desc": "TV Noblex LED 32\" (80 cms de vision)",
-        "precio": "$75.000", "vendido": false, "categoria": 8
+        "precio": "$75.000", "vendido": true, "categoria": 8
         }, {
         "desc": "Auriculares alta gama Mpow con reduccion de ruido",
         "precio": "$18.000", "vendido": false, "categoria": 8
