--- a/boardgames.html
+++ b/boardgames.html
@@ -257,7 +257,7 @@
         "precio": "11.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Lost Cities 2 player (en ingles)",
-        "precio": "$18.000", "vendido": false,
+        "precio": "$18.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Clue Jr (en ingles)",
         "precio": "$18.000", "vendido": false,
@@ -272,7 +272,7 @@
         "precio": "$68.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Ticket To Ride Europa (en ingles)",
-        "precio": "$48.000", "vendido": false,
+        "precio": "$48.000", "vendido": true
         }, {
         "desc": "Expansion Juego de mesa Ticket to Ride Europa 1912 (en ingles)",
         "precio": "$30.000", "vendido": false,
@@ -287,7 +287,7 @@
         "precio": "$30.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Ticket to Ride Nordic Countries (en ingles)",
-        "precio": "$46.000", "vendido": false,
+        "precio": "$46.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Ticket to India/Switzrland Countries (en ingles)",
         "precio": "$38.000", "vendido": true,
