--- a/todousado.html
+++ b/todousado.html
@@ -394,7 +394,7 @@
         "precio": "$15.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Olla extra grande 28cm Tramontina",
-        "precio": "$40.000", "vendido": false, "categoria": 2
+        "precio": "$40.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Olla a presión Marmicoc",
         "precio": "$30.000", "vendido": true, "categoria": 2
@@ -1030,7 +1030,7 @@
         "precio": "$25.000", "vendido": false, "categoria": 7
         }, {
         "desc": "Plancha Black and Decker Power Pro",
-        "precio": "$15.000", "vendido": false, "categoria": 1
+        "precio": "$15.000", "vendido": true, "categoria": 1
         }, {
         "desc": "Dos pesas 5kg",
         "precio": "$5.000", "vendido": true, "categoria": 4
@@ -1096,7 +1096,7 @@
         "precio": "$30.000", "vendido": false, "categoria": 2
         }, {
         "desc": "Vajillas ponchera",
-        "precio": "$18.000", "vendido": false, "categoria": 2
+        "precio": "$18.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Exprimidora Jugos Top House",
         "precio": "$15.000", "vendido": false, "categoria": 2
@@ -1203,7 +1203,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 18 de Febrero 2024
+        Actualizada Version 19 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
