--- a/todousado.html
+++ b/todousado.html
@@ -1006,7 +1006,7 @@
         "precio": "$7.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Fuente de vidrio Pirex grande",
-        "precio": "$10.000", "vendido": false, "categoria": 2
+        "precio": "$10.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Tupper redondo para pizza o tarta",
         "precio": "$3.500", "vendido": false, "categoria": 2
@@ -1121,6 +1121,9 @@
         }, {
         "desc": "Patines Talle 27-30",
         "precio": "$16.000", "vendido": false, "categoria": 4
+        }, {
+        "desc": "Amazon Fire Stick HDMI para ver Netflix/Amazon/HBO, todo streaming",
+        "precio": "$15.000", "vendido": false, "categoria": 6
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
@@ -1203,7 +1206,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 19 de Febrero 2024
+        Actualizada Version 21 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
