--- a/todousado.html
+++ b/todousado.html
@@ -1123,7 +1123,10 @@
         "precio": "$16.000", "vendido": false, "categoria": 4
         }, {
         "desc": "Amazon Fire Stick HDMI para ver Netflix/Amazon/HBO, todo streaming",
-        "precio": "$15.000", "vendido": false, "categoria": 6
+        "precio": "$20.000", "vendido": false, "categoria": 8
+        }, {
+        "desc": "Google Chromecast",
+        "precio": "$20.000", "vendido": false, "categoria": 8
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
