--- a/todousado.html
+++ b/todousado.html
@@ -1127,6 +1127,9 @@
         }, {
         "desc": "Google Chromecast",
         "precio": "$20.000", "vendido": false, "categoria": 8
+        }, {
+        "desc": "Candado para bicicleta",
+        "precio": "$5.000", "vendido": false, "categoria": 4
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
