--- a/todousado.html
+++ b/todousado.html
@@ -298,7 +298,7 @@
         "precio": "$5.000", "vendido": false, "categoria": 10
         }, {
         "desc": "Sillas de Hierro (precio cada una)",
-        "precio": "$70.000", "vendido": false, "categoria": 7
+        "precio": "$70.000", "vendido": true, "categoria": 7
         }, {
         "desc": "TV inteligente Noblex LED 108cm",
         "precio": "$215.000", "vendido": false, "categoria": 8
@@ -370,7 +370,7 @@
         "precio": "$45.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Arco Prana Junior para adolescentes y 2 flechas",
-        "precio": "$60.000", "vendido": false, "categoria": 0
+        "precio": "$60.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Coleccion de 54 autitos de juguete y rueda Hot Wheels para guardar",
         "precio": "$100.000", "vendido": false, "categoria": 0
@@ -400,10 +400,10 @@
         "precio": "$30.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Ensaladera de losa blanca",
-        "precio": "$10.000", "vendido": false, "categoria": 2
+        "precio": "$10.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Ensaladera de madera",
-        "precio": "$15.000", "vendido": false, "categoria": 2
+        "precio": "$15.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Medidor de vidrio grande",
         "precio": "$15.000", "vendido": false, "categoria": 2
@@ -415,7 +415,7 @@
         "precio": "$20.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Tupper Maped Picnic (precio cada uno)",
-        "precio": "$8.000", "vendido": false, "categoria": 2
+        "precio": "$8.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Juego de comoda con 2 mesitas de luz (no salen en la foto)",
         "precio": "$140.000", "vendido": false, "categoria": 3
@@ -592,7 +592,7 @@
         "precio": "$10.000", "vendido": false, "categoria": 1
         }, {
         "desc": "Lechuza decoración 10cm cerámica",
-        "precio": "$6.000", "vendido": false, "categoria": 1
+        "precio": "$6.000", "vendido": true, "categoria": 1
         }, {
         "desc": "Bandeja antigua de acero y hierro grande ",
         "precio": "$25.000", "vendido": false, "categoria": 1
@@ -628,7 +628,7 @@
         "precio": "$45.000", "vendido": true, "categoria": 7
         }, {
         "desc": "Cama Saltarina Grande (4 metros)",
-        "precio": "$250.000", "vendido": false, "categoria": 7
+        "precio": "$190.000", "vendido": false, "categoria": 7
         }, {
         "desc": "Juguetes muñecas Barbies original (precio por muñeca)",
         "precio": "$10.000", "vendido": false, "categoria": 0
@@ -769,7 +769,7 @@
         "precio": "$25.000", "vendido": false, "categoria": 1
         }, {
         "desc": "Armario para copas con 2 cajones madera guatambu 0,54x1,94",
-        "precio": "$60.000", "vendido": false, "categoria": 3
+        "precio": "$60.000", "vendido": true, "categoria": 3
         }, {
         "desc": "Fondue",
         "precio": "$15.000", "vendido": false, "categoria": 2
@@ -778,7 +778,7 @@
         "precio": "$30.000", "vendido": true, "categoria": 2
         }, {
         "desc": "Hornito Yelmo (funciona OK)",
-        "precio": "$15.000", "vendido": false, "categoria": 2
+        "precio": "$15.000", "vendido": true, "categoria": 2
         }, {
         "desc": "2 acolchados iguales 1 plaza (precio por cada uno)",
         "precio": "$15.000", "vendido": true, "categoria": 1
@@ -814,7 +814,7 @@
         "precio": "$75.000", "vendido": true, "categoria": 8
         }, {
         "desc": "Auriculares alta gama Mpow con reduccion de ruido",
-        "precio": "$18.000", "vendido": false, "categoria": 8
+        "precio": "$18.000", "vendido": true, "categoria": 8
         }, {
         "desc": "Mochila termica importada marca Ozark Trails, excelente para llevar cervezas en caminata",
         "precio": "$40.000", "vendido": true, "categoria": 10
@@ -832,7 +832,7 @@
         "precio": "$55.000", "vendido": false, "categoria": 5
         }, {
         "desc": "Campera M Uniclo (arreglar cierre)",
-        "precio": "$20.000", "vendido": false, "categoria": 5
+        "precio": "$20.000", "vendido": true, "categoria": 5
         }, {
         "desc": "Campera Jean Corderito",
         "precio": "$25.000", "vendido": false, "categoria": 5
@@ -871,7 +871,7 @@
         "precio": "$15.000", "vendido": true, "categoria": 9
         }, {
         "desc": "Raqueta Tenis Wilson Blade casi nueva",
-        "precio": "$180.000", "vendido": false, "categoria": 4
+        "precio": "$180.000", "vendido": true, "categoria": 4
         }, {
         "desc": "Raqueta Tenis Wilson",
         "precio": "$85.000", "vendido": false, "categoria": 4
@@ -913,16 +913,16 @@
         "precio": "$250.000", "vendido": true, "categoria": 1
         }, {
         "desc": "Biblioteca madera maciza 1,75x1,00",
-        "precio": "$60.000", "vendido": false, "categoria": 3
+        "precio": "$60.000", "vendido": true, "categoria": 3
         }, {
         "desc": "Mueble con cuatro canastos",
-        "precio": "$25.000", "vendido": false, "categoria": 3
+        "precio": "$25.000", "vendido": true, "categoria": 3
         }, {
         "desc": "Guardador de jueguetes/etcde madera laqueado",
-        "precio": "$15.000", "vendido": false, "categoria": 3
+        "precio": "$15.000", "vendido": true, "categoria": 3
         }, {
         "desc": "Estanteria de madera guatambu 1,81x0,68",
-        "precio": "$80.000", "vendido": false, "categoria": 3
+        "precio": "$80.000", "vendido": true, "categoria": 3
         }, {
         "desc": "2 banquitos altos para desayunador",
         "precio": "$30.000", "vendido": true, "categoria": 2
