--- a/boardgames.html
+++ b/boardgames.html
@@ -251,7 +251,7 @@
         "precio": "$28.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Forbidden Island (en ingles)",
-        "precio": "$20.000", "vendido": false,
+        "precio": "$20.000", "vendido": true,
         }, {
         "desc": "Juego de cartas 1000 millas",
         "precio": "11.000", "vendido": false,
