--- a/todousado.html
+++ b/todousado.html
@@ -517,7 +517,7 @@
         "precio": "$28.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Juego de mesa Forbidden Island (en ingles)",
-        "precio": "$20.000", "vendido": false, "categoria": 0
+        "precio": "$20.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de cartas 1000 millas",
         "precio": "11.000", "vendido": false, "categoria": 0
@@ -1130,6 +1130,9 @@
         }, {
         "desc": "Candado para bicicleta",
         "precio": "$5.000", "vendido": false, "categoria": 4
+        }, {
+        "desc": "Lavavajillas Drean Dish 12.2 LT de 12 cubiertos blanco impecable",
+        "precio": "$420.000", "vendido": false, "categoria": 2
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
