--- a/todousado.html
+++ b/todousado.html
@@ -1133,6 +1133,12 @@
         }, {
         "desc": "Lavavajillas Drean Dish 12.2 LT de 12 cubiertos blanco impecable",
         "precio": "$420.000", "vendido": false, "categoria": 2
+        }, {
+        "desc": "Botella de agua comprimible",
+        "precio": "$10.000", "vendido": false, "categoria": 1
+        }, {
+        "desc": "Pizarra blanca con marco metálico con 4 marcadores y borrador",
+        "precio": "$12.000", "vendido": false, "categoria": 1
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
