--- a/todousado.html
+++ b/todousado.html
@@ -1105,10 +1105,10 @@
         "precio": "$10.000", "vendido": false, "categoria": 6
         }, {
         "desc": "Reposera portatil plegable",
-        "precio": "$15.000", "vendido": false, "categoria": 7
+        "precio": "$15.000", "vendido": true, "categoria": 7
         }, {
         "desc": "Reposera portatil plegable",
-        "precio": "$15.000", "vendido": false, "categoria": 7
+        "precio": "$15.000", "vendido": true, "categoria": 7
         }, {
         "desc": "Mochila niña",
         "precio": "$15.000", "vendido": false, "categoria": 0
@@ -1139,6 +1139,9 @@
         }, {
         "desc": "Pizarra blanca con marco metálico con 4 marcadores y borrador",
         "precio": "$12.000", "vendido": false, "categoria": 1
+        }, {
+        "desc": "Masajadeor electrico de cuello y hombros de lujo",
+        "precio": "$65.000", "vendido": false, "categoria": 1
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
@@ -1221,7 +1224,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 21 de Febrero 2024
+        Actualizada Version 22 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
