--- a/boardgames.html
+++ b/boardgames.html
@@ -303,6 +303,9 @@
         }, {
         "desc": "Juego de mesa 7 Wonders (en ingles)",
         "precio": "$65.000", "vendido": false,
+        }, {
+        "desc": "Juego de Mesa Tren Mejicano en caja de viaje, como nuevo",
+        "precio": "$30.000", "vendido": false, "categoria": 0
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
