--- a/todousado.html
+++ b/todousado.html
@@ -1142,6 +1142,9 @@
         }, {
         "desc": "Masajadeor electrico de cuello y hombros de lujo",
         "precio": "$65.000", "vendido": false, "categoria": 1
+        }, {
+        "desc": "Juego de Mesa Tren Mejicano en caja de viaje, como nuevo",
+        "precio": "$30.000", "vendido": false, "categoria": 0
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
