--- a/boardgames.html
+++ b/boardgames.html
@@ -206,10 +206,10 @@
         "precio": "$60.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Diplomacy (version original en ingles)",
-        "precio": "$30.000", "vendido": false,
+        "precio": "$30.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Clue",
-        "precio": "$11.000", "vendido": false,
+        "precio": "$11.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Crucigrama, version local del Scrabble ",
         "precio": "$6.000", "vendido": false,
