--- a/todousado.html
+++ b/todousado.html
@@ -265,7 +265,7 @@
         "precio": "$100.000", "vendido": true, "categoria": 9
         }, {
         "desc": "Pantalon impermeable de adulto Patagonia",
-        "precio": "$48.000", "vendido": false, "categoria": 9
+        "precio": "$48.000", "vendido": true, "categoria": 9
         }, {
         "desc": "Carpa de montaña The North Face 3 personas Lunarfire",
         "precio": "$125.000", "vendido": true, "categoria": 9
@@ -295,13 +295,13 @@
         "precio": "$15.000", "vendido": true, "categoria": 1
         }, {
         "desc": "Portaequipaje auto",
-        "precio": "$5.000", "vendido": false, "categoria": 10
+        "precio": "$5.000", "vendido": true, "categoria": 10
         }, {
         "desc": "Sillas de Hierro (precio cada una)",
         "precio": "$70.000", "vendido": true, "categoria": 7
         }, {
         "desc": "TV inteligente Noblex LED 108cm",
-        "precio": "$215.000", "vendido": false, "categoria": 8
+        "precio": "$215.000", "vendido": true, "categoria": 8
         }, {
         "desc": "TV LG 42 pulgadas",
         "precio": "$140.000", "vendido": true, "categoria": 8
@@ -325,7 +325,7 @@
         "precio": "$200.000", "vendido": false, "categoria": 1
         }, {
         "desc": "Pizarra doble con rollo",
-        "precio": "$35.000", "vendido": false, "categoria": 0
+        "precio": "$35.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Cartera Ty",
         "precio": "$8.000", "vendido": false, "categoria": 0
@@ -472,10 +472,10 @@
         "precio": "$60.000", "vendido": false, "categoria": 0
         }, {
         "desc": "Juego de mesa Diplomacy (version original en ingles)",
-        "precio": "$30.000", "vendido": false, "categoria": 0
+        "precio": "$30.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Clue",
-        "precio": "$11.000", "vendido": false, "categoria": 0
+        "precio": "$11.000", "vendido": true, "categoria": 0
         }, {
         "desc": "Juego de mesa Crucigrama, version local del Scrabble ",
         "precio": "$6.000", "vendido": false, "categoria": 0
@@ -1227,7 +1227,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 22 de Febrero 2024
+        Actualizada Version 25 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
